style.css
#Yubeats {
    color: rgb(156, 156, 126);
    font-size: 5vw;
    font-family: URW Chancery L, cursive;
    text-align: center;
}
body {
    background-image: url("images/IMG_20230708_201243.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}
nav ul {
    width: 100%;
    height: 5vw;
    background: rgba(255, 255, 255, 0.466);
    display:flex;
    align-items: center;
    justify-content: space-evenly;
    padding: 0%;
    margin: 0%;
    list-style-type: none;
    overflow: hidden;
}
nav a {
    display: block;
    list-style: none;
    color: black;
    text-decoration: none;
    padding: 15vw;
    font-size: 2vw;
    font-family: URW Chancery L, cursive;
}
nav a:hover{
    background-color: rgba(255, 255, 255, 0.781);
}

